--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "config",
     "aimee": "app",
-    "description": "Aimee的config模块，用于处理配置文件",
+    "description": "管理配置文件, config",
     "main": "config.js",
-    "version": "1.0.0",
+    "version": "1.2.0",
     "scripts": {
         "test": "uz -v"
     },
@@ -23,5 +23,9 @@
         "url": "https://github.com/Aimeejs/config/issues"
     },
     "homepage": "https://github.com/Aimeejs/config",
-    "dependencies": {}
+    "dependencies": {
+        "aimee-is": "^1.0.0",
+        "aimee-extend": "^1.0.0",
+        "aimee-class": "^1.0.0"
+    }
 }
